MODIFY. Upgrade waters.bat to support Java 8-10.